[package]
name = "waffles-solana-faucet"
version = "1.16.0-alpha.7"
description = "Waffle Labs maintained Solana Faucet"
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-faucet"
edition = "2021"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
clap = "2.33"
crossbeam-channel = "0.5"
log = "0.4.17"
serde = "1.0.152"
serde_derive = "1.0.103"
solana-clap-utils = { package = "waffles-solana-clap-utils", path = "../clap-utils", version = "=1.16.0-alpha.7" }
solana-cli-config = { package = "waffles-solana-cli-config", path = "../cli-config", version = "=1.16.0-alpha.7" }
solana-logger = { package = "waffles-solana-logger", path = "../logger", version = "=1.16.0-alpha.7" }
solana-metrics = { package = "waffles-solana-metrics", path = "../metrics", version = "=1.16.0-alpha.7" }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.16.0-alpha.7" }
solana-version = { package = "waffles-solana-version", path = "../version", version = "=1.16.0-alpha.7" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "solana_faucet"

[[bin]]
name = "solana-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
