[package]
name = "waffles-solana-genesis-utils"
version = "1.15.0"
description = "Waffle Labs maintained Solana Genesis Utils"
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-download-utils"
edition = "2021"

[dependencies]
solana-download-utils = { path = "../download-utils", version = "=1.15.0" }
solana-runtime = { path = "../runtime", version = "=1.15.0" }
solana-sdk = { path = "../sdk", version = "=1.15.0" }

[lib]
crate-type = ["lib"]
name = "solana_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
