[package]
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
edition = "2021"
name = "waffles-solana-genesis"
description = "Waffle Labs maintained Blockchain, Rebuilt for Scale"
version = "1.15.0.1"
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-genesis"

[dependencies]
base64 = "0.13.0"
clap = "2.33.1"
serde = "1.0.144"
serde_json = "1.0.83"
serde_yaml = "0.9.13"
solana-clap-utils = { package = "waffles-solana-clap-utils", path = "../clap-utils", version = "=1.15.0" }
waffles-solana-cli-config = { path = "../cli-config", version = "=1.15.0" }
waffles-solana-entry = { path = "../entry", version = "=1.15.0" }
waffles-solana-ledger = { path = "../ledger", version = "=1.15.0" }
solana-logger = { package = "waffles-solana-logger", path = "../logger", version = "=1.15.0" }
solana-runtime = { package = "waffles-solana-runtime", path = "../runtime", version = "=1.15.0" }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.15.0" }
solana-stake-program = { package = "waffles-solana-stake-program", path = "../programs/stake", version = "=1.15.0" }
solana-version = { package = "waffles-solana-version", path = "../version", version = "=1.15.0" }
solana-vote-program = { package = "waffles-solana-vote-program", path = "../programs/vote", version = "=1.15.0" }
tempfile = "3.3.0"

[[bin]]
name = "solana-genesis"
path = "src/main.rs"

[lib]
name = "solana_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
