[package]
name = "waffles-solana-geyser-plugin-manager"
description = "Waffle Labs maintained The Solana Geyser plugin manager."
version = "1.16.0-alpha.6"
repository = "https://github.com/waffles-labs/solana"
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-geyser-plugin-manager"

[dependencies]
bs58 = "0.4.0"
crossbeam-channel = "0.5"
json5 = "0.4.1"
libloading = "0.7.4"
log = "0.4.17"
serde_json = "1.0.83"
solana-geyser-plugin-interface = { package = "waffles-solana-geyser-plugin-interface", path = "../geyser-plugin-interface", version = "=1.16.0-alpha.6" }
solana-measure = { package = "waffles-solana-measure", path = "../measure", version = "=1.16.0-alpha.6" }
solana-metrics = { package = "waffles-solana-metrics", path = "../metrics", version = "=1.16.0-alpha.6" }
solana-rpc = { package = "waffles-solana-rpc", path = "../rpc", version = "=1.16.0-alpha.6" }
solana-runtime = { package = "waffles-solana-runtime", path = "../runtime", version = "=1.16.0-alpha.6" }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.16.0-alpha.6" }
solana-transaction-status = { package = "waffles-solana-transaction-status", path = "../transaction-status", version = "=1.16.0-alpha.6" }
thiserror = "1.0.31"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
