[package]
name = "waffles-solana-keygen"
version = "1.16.0-alpha.4"
description = "Waffle Labs maintained Solana key generation utility"
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-keygen"
edition = "2021"

[dependencies]
bs58 = "0.4.0"
clap = { version = "3.1.5", features = ["cargo"] }
dirs-next = "2.0.0"
num_cpus = "1.13.1"
solana-clap-v3-utils = { package = "waffles-solana-clap-v3-utils", path = "../clap-v3-utils", version = "=1.16.0-alpha.4" }
solana-cli-config = { package = "waffles-solana-cli-config", path = "../cli-config", version = "=1.16.0-alpha.4" }
solana-remote-wallet = { package = "waffles-solana-remote-wallet", path = "../remote-wallet", version = "=1.16.0-alpha.4" }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.16.0-alpha.4" }
solana-version = { package = "waffles-solana-version", path = "../version", version = "=1.16.0-alpha.4" }
tiny-bip39 = "0.8.2"

[[bin]]
name = "solana-keygen"
path = "src/keygen.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
