[package]
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
edition = "2021"
name = "waffles-solana-ledger-tool"
description = "Waffle Labs maintained Blockchain, Rebuilt for Scale"
version = "1.15.0"
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-ledger-tool"

[dependencies]
bs58 = "0.4.0"
chrono = "0.4.22"
clap = "2.33.1"
crossbeam-channel = "0.5"
csv = "1.1.6"
dashmap = "4.0.2"
histogram = "0.6.9"
itertools = "0.10.5"
log = { version = "0.4.17" }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
waffles-solana-account-decoder = { path = "../account-decoder", version = "=1.15.0" }
waffles-solana-clap-utils = { path = "../clap-utils", version = "=1.15.0" }
waffles-solana-cli-output = { path = "../cli-output", version = "=1.15.0" }
waffles-solana-core = { path = "../core", version = "=1.15.0" }
waffles-solana-entry = { path = "../entry", version = "=1.15.0" }
waffles-solana-geyser-plugin-manager = { path = "../geyser-plugin-manager", version = "=1.15.0" }
waffles-solana-ledger = { path = "../ledger", version = "=1.15.0" }
waffles-solana-logger = { path = "../logger", version = "=1.15.0" }
waffles-solana-measure = { path = "../measure", version = "=1.15.0" }
waffles-solana-runtime = { path = "../runtime", version = "=1.15.0" }
waffles-solana-sdk = { path = "../sdk", version = "=1.15.0" }
waffles-solana-stake-program = { path = "../programs/stake", version = "=1.15.0" }
waffles-solana-storage-bigtable = { path = "../storage-bigtable", version = "=1.15.0" }
waffles-solana-transaction-status = { path = "../transaction-status", version = "=1.15.0" }
waffles-solana-version = { path = "../version", version = "=1.15.0" }
waffles-solana-vote-program = { path = "../programs/vote", version = "=1.15.0" }
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { package = "tikv-jemallocator", version = "0.4.1", features = ["unprefixed_malloc_on_supported_platforms"] }

[dev-dependencies]
assert_cmd = "2.0"
bytecount = "0.6.3"

[target."cfg(unix)".dependencies]
signal-hook = "0.3.14"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
