[package]
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
edition = "2021"
name = "waffles-solana-local-cluster"
description = "Waffle Labs maintained Blockchain, Rebuilt for Scale"
version = "1.15.0"
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-local-cluster"

[dependencies]
crossbeam-channel = "0.5"
fs_extra = "1.2.0"
itertools = "0.10.5"
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
solana-client = { package = "waffles-solana-client", path = "../client", version = "=1.15.0" }
waffles-solana-config-program = { path = "../programs/config", version = "=1.15.0" }
solana-core = { package = "waffles-solana-core", path = "../core", version = "=1.15.0" }
waffles-solana-entry = { path = "../entry", version = "=1.15.0" }
solana-gossip = { package = "waffles-solana-gossip", path = "../gossip", version = "=1.15.0" }
waffles-solana-ledger = { path = "../ledger", version = "=1.15.0" }
solana-pubsub-client = { package = "waffles-solana-pubsub-client", path = "../pubsub-client", version = "=1.15.0" }
solana-rpc-client = { package = "waffles-solana-rpc-client", path = "../rpc-client", version = "=1.15.0", default-features = false }
solana-rpc-client-api = { package = "waffles-solana-rpc-client-api", path = "../rpc-client-api", version = "=1.15.0" }
solana-runtime = { package = "waffles-solana-runtime", path = "../runtime", version = "=1.15.0" }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.15.0" }
waffles-solana-stake-program = { path = "../programs/stake", version = "=1.15.0" }
solana-streamer = { package = "waffles-solana-streamer", path = "../streamer", version = "=1.15.0" }
waffles-solana-thin-client = { path = "../thin-client", version = "=1.15.0" }
waffles-solana-tpu-client = { path = "../tpu-client", version = "=1.15.0", default-features = false }
waffles-solana-vote-program = { path = "../programs/vote", version = "=1.15.0" }
tempfile = "3.3.0"

[dev-dependencies]
assert_matches = "1.5.0"
gag = "1.0.0"
serial_test = "0.9.0"
waffles-solana-download-utils = { path = "../download-utils", version = "=1.15.0" }
solana-logger = { package = "waffles-solana-logger", path = "../logger", version = "=1.15.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
