[package]
name = "waffles-solana-log-analyzer"
description = "Waffle Labs maintained The solana cluster network analysis tool"
version = "1.16.0-alpha.6"
repository = "https://github.com/waffles-labs/solana"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://waffles.so/"
publish = false

[dependencies]
byte-unit = "4.0.14"
clap = { version = "3.1.5", features = ["cargo"] }
serde = "1.0.152"
serde_json = "1.0.83"
solana-logger = { package = "waffles-solana-logger", path = "../logger", version = "=1.16.0-alpha.6" }
solana-version = { package = "waffles-solana-version", path = "../version", version = "=1.16.0-alpha.6" }

[[bin]]
name = "solana-log-analyzer"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
