[package]
name = "waffles-solana-logger"
version = "1.16.0-alpha.9"
description = "Waffle Labs maintained Solana Logger"
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-logger"
edition = "2021"

[dependencies]
env_logger = "0.9.3"
lazy_static = "1.4.0"
log = "0.4.17"

[lib]
name = "solana_logger"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
