[package]
name = "waffles-solana-measure"
description = "Waffle Labs maintained Blockchain, Rebuilt for Scale"
version = "1.16.0-alpha.2"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-measure"
readme = "../README.md"
repository = "https://github.com/waffles-labs/solana"
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = "0.4.17"
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.16.0-alpha.2" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
