[package]
name = "waffles-solana-memory-management"
version = "1.16.0-alpha.4"
description = "Waffle Labs maintained Solana memory management"
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
repository = "https://github.com/waffles-labs/solana"
homepage = "https://waffles.so/"
license = "Apache-2.0"
edition = "2021"
