[package]
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
edition = "2021"
name = "waffles-solana-merkle-root-bench"
version = "1.15.0"
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.17"
solana-logger = { package = "waffles-solana-logger", path = "../logger", version = "=1.15.0" }
solana-measure = { package = "waffles-solana-measure", path = "../measure", version = "=1.15.0" }
solana-runtime = { package = "waffles-solana-runtime", path = "../runtime", version = "=1.15.0" }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.15.0" }
solana-version = { package = "waffles-solana-version", path = "../version", version = "=1.15.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
